base/oauth-proxy/jaeger/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-oauth-proxy-svc
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: jaeger-tls
spec:
  selector:
    app: jaeger-oauth-proxy
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: public
---
