base/oauth-proxy/jaeger/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jaeger-route
spec:
  to:
    kind: Service
    name: jaeger-oauth-proxy-svc
  port:
    targetPort: public
  tls:
    termination: reencrypt
---
